Fixed layout problem on webkit and chromium

--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -8,17 +8,19 @@
     overflow: hidden;
 }
 
-img {
+.imageContainer {
     flex: 2;
     width: 100%;
     height: 100vh;
-    object-fit: cover;
-
+    background-image: url("../Images/Electricity.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 .loginFormContainer {
     flex: 1;
     width: 100%;
+    height: 100vh;
     padding: 50px;
     background-color: white;
     display: flex;
@@ -52,7 +54,7 @@ h1 {
 }
 
 @media (max-width: 767px) {
-    image {
-        display: none;
+    .imageContainer {
+        flex: 0;
     }
 }
